patch index.html

--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
       <span></span>
       <span></span>
       <span></span>
-
-
   <section id="hero">
     <h1 class="hero__heading" style="text-align: center;">Bienvenue sur mon portfolio !</h1>
     <div class="container">
@@ -98,32 +96,55 @@
           <div class="hero__left__wrapper">
             <h1 class="hero__heading">Lahlouh Nassim</h1>
             <p class="hero__info" style="font-size: medium;">
-              Étudiant en deuxième année de BTS, je suis passionné par le développement web. Je suis à la recherche d'opportunités pour continuer à développer mes compétences et à contribuer à des projets passionnants.
+              Étudiant en deuxième année de BTS SIO, je suis passionné par le développement web. Je suis à la recherche d'opportunités pour continuer à développer mes compétences et à contribuer à des projets passionnants.
             </p>
-            <div class="button__wrapper">
-              <a href="../images/LahlouhNassimCvAlt.DOCX" download="LahlouhNassimCvAlt" class="btn">Télécharger CV</a>
+            <div class="button__wrapper" style="padding-bottom: 35px;">
+              <a href="LahlouhNassimCvAlt.DOCX" download="LahlouhNassimCvAlt" class="btn">Télécharger CV</a>
               <a href="../html/projet.html" class="btn">Voir Les Projets</a>
             </div>
           </div>
         </div>
-
-        <!--<div class="hero__right" data-aos="fade-right">
-          <div class="hero__imgWrapper">-->
-            <img src="header-img.svg"   style="width: 500px; margin-right: 0px;">
-
-
+        <div class="hero__right" data-aos="fade-right">
+          <div class="hero__imgWrapper">
+            <img src="header-img.svg"   style="width: 100%; margin-right: 0px;">
       </div>
       </div>
       </div>
   </section>
-   
+
+
+  <section style="background-color: #d8cbe1; padding-bottom: 50px;;">
+    <div class="container">
+      <div class="hero__wrapper">
+        <div class="hero__left" data-aos="fade-left">
+
+          <div class="hero__left__wrapper">
+            <h1 class="hero__heading" style="color: #3f2045;">Le BTS SIO C'est quoi ?</h1>
+            <p class="hero__info" style="font-size: medium; color: #3f2045;" >
+              Le BTS SIO (Services Informatiques aux Organisations) est un diplôme de l'enseignement supérieur qui se prépare en deux ans après le baccalauréat. Ce cursus forme des professionnels capables de concevoir, de mettre en place et de maintenir des solutions informatiques au sein des organisations (entreprises, associations, administrations, etc.). <br> <br>
+              Les étudiants ont le choix entre deux options : la spécialité "Solutions d'infrastructure, systèmes et réseaux" (SISR) qui forme des administrateurs systèmes et réseaux, ou la spécialité "Solutions logicielles et applications métiers" (SLAM) qui forme des développeurs d'applications. <br> <br>
+              Le BTS SIO offre une formation polyvalente qui permet aux diplômés de s'adapter aux besoins des entreprises et de développer des compétences très recherchées sur le marché de l'emploi. </p>
+           <div class="button__wrapper">
+              <a href="LahlouhNassimCvAlt.DOCX" download="LahlouhNassimCvAlt" class="btn2" >Télécharger CV</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="hero__right" data-aos="fade-right" style="padding-top: 35px;">
+          <div class="hero__imgWrapper">
+            <img src="competences_bts_sio.png"   style="width: 100%; margin-right: 0px;">
+
+
+      </div>
+      </div>
+   </section>
    
     
   </body>
   
 
 <footer class="text-center text-lg-start bg-light text-white h5">
-  <section id="fin" class="" style="background-color: rgb(0, 0, 0);">
+  <section id="fin" class="" style="background-color: rgb(0, 0, 0); padding-top: 1px;">
     <div class="container text-center text-md-start mt-5">
       <div class="row mt-3">
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
