--- a/parcours.html
+++ b/parcours.html
@@ -244,6 +244,10 @@
 </section>
 <section>
   <div style="text-align: center; padding-top:45px">
+    <a href="tabSyn23.pdf" download="tabSyn23.pdf" class="btn" title="NewTab" style="    width: auto;
+    height: auto;
+    margin: 30px;
+    font-size: xx-large;">Le tableau est illisible ? Appuyer ici le voir dans une autre fenêtre</a>
     <img src="tabComp2.JPG"   style="width: 100%; height: 60%;">
   </div>
 </section>
