patch index.html 2

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               Les étudiants ont le choix entre deux options : la spécialité "Solutions d'infrastructure, systèmes et réseaux" (SISR) qui forme des administrateurs systèmes et réseaux, ou la spécialité "Solutions logicielles et applications métiers" (SLAM) qui forme des développeurs d'applications. <br> <br>
               Le BTS SIO offre une formation polyvalente qui permet aux diplômés de s'adapter aux besoins des entreprises et de développer des compétences très recherchées sur le marché de l'emploi. </p>
            <div class="button__wrapper">
-              <a href="LahlouhNassimCvAlt.DOCX" download="LahlouhNassimCvAlt" class="btn2" >Télécharger CV</a>
+              <a href="https://www.onisep.fr/ressources/univers-formation/Formations/Post-bac/bts-services-informatiques-aux-organisations-option-b-solutions-logicielles-et-applications-metiers" class="btn2" target="_blank" >Plus d'informations</a>
             </div>
           </div>
         </div>
