--- a/index.html
+++ b/index.html
@@ -139,6 +139,25 @@
       </div>
    </section>
    
+
+   <section id="portfolio">
+    <div class='container'>
+    <div class="white-divider"></div>
+    <div class="heading">
+        <h2>Aprércu des projets</h2>
+    </div>
+                        <div class='row'>    
+                <div class="col-sm-4"><a href="http://www.facebook.com" target="_blank"><img src="facebook_share.png" class="img-thumbnail" alt="facebook share"></a></div>
+                <div class="col-sm-4"><a href="http://www.google.com" target="_blank"><img src="google_translate.png" class="img-thumbnail" alt="google translate"></a></div>
+                <div class="col-sm-4"><a href="http://www.twitter.com" target="_blank"><img src="twitter_video.png" class="img-thumbnail" alt="twitter_video"></a></div>
+                        </div>
+                        <div class='row'> 
+                <div class="col-sm-4"><a href="http://www.google.com" target="_blank"><img src="youtube.png" class="img-thumbnail" alt="facebook share"></a></div>
+                <div class="col-sm-4"><a href="http://www.twitter.com" target="_blank"><img src="twitter_retweet.png" class="img-thumbnail" alt="google translate"></a></div>
+                <div class="col-sm-4"><a  href="http://www.facebook.com" target="_blank"><img src="facebook_video.png" alt="twitter_video" class="img-thumbnail"></a></div>             
+                        </div>   
+            </div>         
+</section>
     
   </body>
   
