add page projet

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               Projet
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="projA1.html">1er année</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
             </ul>
           </li>
@@ -110,6 +110,7 @@
       <span></span>
       <span></span>
       <span></span>
+      
   <section id="hero">
     <h1 class="hero__heading" style="text-align: center;">Bienvenue sur mon portfolio !</h1>
     <div class="container">
