--- a/projA1.html
+++ b/projA1.html
@@ -12,31 +12,49 @@
     <title>cv nass</title>
     <link href="styles.css" rel="stylesheet">
   </head>
+ 
+
   <header>
-    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-    <a class="navbar-brand" href="index.html">NL.</a>
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html" target="blank">Accueil</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="projet.html" target="blank">Projet</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="veilles.html" target="blank">Veilles</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#fin">Contrat</a>
-      </li>
-    </ul>
-  </nav>
-  </header>
+    <nav class="navbar navbar-expand-lg bg-light bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          &#127828;
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html" target="blank">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
+            </li><li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Projet
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="projA1.html">1er année</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="stages.html" target="blank">Stages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="veilles.html" target="blank">Veilles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#fin">Contrat</a>
+            </li>
+          </ul>
+            <a>LAHLOUH Nassim.</a>
+        </div>
+      </div>
+    </nav>
+    </header>
+
   <body class="background">
     <button onclick="topFunction()" id="myBtn" title="Go to top">&#128285;</button>
       <span></span>
@@ -91,8 +109,8 @@
       <span></span>
    </div>
   <body>
-    <h1 class="hero__heading" style="text-align: center;">Mes deux Stages</h1>
-    <p class="hero__headingp" style="text-align: center;" >Au cours de ma première année, j'ai eu l'occasion de participer à plusieurs projets personnel et scolaire qui m'ont aidé à améliorer mes compétences. J’ai pu mettre en pratique mes connaissances en HTML, CSS et PHP, tout en apprenant à utiliser des frameworks comme que Bootstrap. J'ai également participé à un projet de développement d'une maquette, un forum, une application météo et d'un jeu</p>
+    <h1 class="hero__heading" style="text-align: center;">Projet de ma 1er année</h1>
+    <p class="hero__headingp" style="text-align: center;" >Au cours de ma première année, j'ai eu l'occasion de participer à plusieurs projets personnel et scolaire qui m'ont aidé à améliorer mes compétences. J’ai pu mettre en pratique mes connaissances en HTML, CSS et PHP, tout en apprenant à utiliser des frameworks comme Bootstrap. J'ai également participé à un projet de développement d'une maquette, un forum, une application météo et d'un jeu</p>
     <section class="main-content marge2">
         <div class="test35">
         <div class="cards">
