--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="projA1.html">1er année</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="projA2.html">2éme année</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -58,6 +58,8 @@
     </div>
   </nav>
   </header>
+
+
   <body class="background">
     <button onclick="topFunction()" id="myBtn" title="Go to top">&#128285;</button>
       <span></span>
