--- a/parcours.html
+++ b/parcours.html
@@ -248,7 +248,10 @@
     height: auto;
     margin: 30px;
     font-size: xx-large;">Le tableau est illisible ? Appuyer ici le voir dans une autre fenêtre</a>
-    <img src="tabComp2.JPG"   style="width: 80%; height: 80%;">
+   <!-- <img src="tabComp2.JPG"   style="width: 80%; height: 80%;"> -->
+
+    <embed src="tabSyn23.pdf" style="width: 80%; height: 500px;" type="application/pdf"/>
+
   </div>
 </section>
 
