add edit projet2

--- a/parcours.html
+++ b/parcours.html
@@ -244,12 +244,7 @@
 </section>
 <section>
   <div style="text-align: center; padding-top:45px">
-    <a href="tabSyn23.pdf" download="tabSyn23.pdf" class="btn" title="NewTab" style="    width: auto;
-    height: auto;
-    margin: 30px;
-    font-size: xx-large;">Le tableau est illisible ? Appuyer ici le voir dans une autre fenêtre</a>
-   <!-- <img src="tabComp2.JPG"   style="width: 80%; height: 80%;"> -->
-
+    <a class="btn" title="NewTab" style="width: auto;height: auto;margin: 30px;font-size: xx-large;">Tableau de synthèse des réaliations profesionnelles</a>
     <embed src="tabSyn23.pdf" style="width: 80%; height: 500px;" type="application/pdf"/>
 
   </div>
