--- a/projA1.html
+++ b/projA1.html
@@ -118,7 +118,7 @@
                 <header>
                     <h2>Page simple</h2>
                 </header>    
-                <img src="youtube.png" alt="Hot air balloons">
+                <img src="miniaturp1.png" alt="Hot air balloons">
                 <div class="content">
                     <p> The idea of reaching the North Pole by means of balloons appears to have been entertained many years ago. </p>        
                 </div>
@@ -131,7 +131,7 @@
                 <header>
                     <h2>Météo</h2>
                 </header>    
-                <img src="youtube.png" alt="Hot air balloons">
+                <img src="miniaturp2.png" alt="Hot air balloons">
                 <div class="content">
                     <p> The idea of reaching the North Pole by means of balloons appears to have been entertained many years ago. </p>
                 </div>
@@ -143,7 +143,7 @@
                 <header>
                     <h2>Forum</h2>
                 </header>    
-                <img src="youtube.png" alt="Hot air balloons">
+                <img src="miniaturp3.png" alt="Hot air balloons">
                 <div class="content">
                     <p> The idea of reaching the North Pole by means of balloons appears to have been entertained many years ago. </p>
                 </div>
@@ -155,7 +155,7 @@
                 <header>
                     <h2>Snake</h2>
                 </header>    
-                <img src="youtube.png" alt="Hot air balloons">
+                <img src="miniaturp4.png" alt="Hot air balloons">
                 <div class="content">
                     <p> The idea of reaching the North Pole by means of balloons appears to have been entertained many years ago. </p>
                  </div>
