--- a/stages.html
+++ b/stages.html
@@ -126,25 +126,25 @@
                 <div class="carousel-item active" data-bs-interval="10000">
                   <img src="stage1.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
+                    <h5>Page Accueil</h5>
                   </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                   <img src="stage1p2.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
+                    <h5>Page Services</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="stage1p3.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
+                    <h5>KWFinder</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="stage1p4.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
+                    <h5>Leçon</h5>
                   </div>
                 </div>
               </div>
@@ -190,38 +190,34 @@
 
             <div id="carouselExampleCaptions" class="carousel slide">
               <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              </div>
+                <button style="background-color: black;"type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button style="background-color: black;"type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2" ></button>
+                <button style="background-color: black;" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button style="background-color: black;"type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="trelloStage2.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Trello</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="chartGraphique.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="gitStage2.PNG" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5 style="color: black;">Charte Graphique</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="abroSite.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5 style="color: black;">Arborescence du site</h5>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="mcdgetre.PNG" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 style="color: black;">MCD de la BDD</h5>
                   </div>
                 </div>
               </div>
