--- a/projA1.html
+++ b/projA1.html
@@ -13,7 +13,6 @@
     <link href="styles.css" rel="stylesheet">
   </head>
  
-
   <header>
     <nav class="navbar navbar-expand-lg bg-light bg-body-tertiary">
       <div class="container-fluid">
@@ -36,7 +35,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="projA1.html">1er année</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="projA2.html">2éme année</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -407,15 +406,14 @@
     
   </body>
   
-
-  <footer class="text-center text-lg-start bg-light text-white h5">
+  <footer class="text-center text-lg-start bg-light text-white h5" style="margin-top: -48px;">
     <section id="fin" class="" style="background-color: rgb(0, 0, 0);">
       <div class="container text-center text-md-start mt-5">
         <div class="row mt-3">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Lahlouh Nassim</h6>
             <p>
-              C'est la fin du porte-folio ! <br>Si vous avez été concaincu,  il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mon github
+              Si vous avez été convaincu, il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mes différents liens
             </p>
           </div>
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -432,9 +430,9 @@
           </div>
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p> à Montrouge</p>
-            <p>lahlouhnassimdev@gmail.com</p>
-            <p>07 83 05 88 71</p>
+            <p> &#128205; à Montrouge</p>
+            <p> &#128231; lahlouhnassimdev@gmail.com</p>
+            <p> &#128222; 07 83 05 88 71</p>
           </div>
         </div>
       </div>
