--- a/index.html
+++ b/index.html
@@ -168,62 +168,44 @@
    </section>
    
 
-   <section id="portfolio">
-    <div class='container'>
-    <div class="white-divider"></div>
-    <div class="heading">
-        <h2>Aprércu des projets</h2>
-    </div>
-                        <div class='row'>    
-                <div class="col-sm-4"><a href="http://www.facebook.com" target="_blank"><img src="facebook_share.png" class="img-thumbnail" alt="facebook share"></a></div>
-                <div class="col-sm-4"><a href="http://www.google.com" target="_blank"><img src="google_translate.png" class="img-thumbnail" alt="google translate"></a></div>
-                <div class="col-sm-4"><a href="http://www.twitter.com" target="_blank"><img src="twitter_video.png" class="img-thumbnail" alt="twitter_video"></a></div>
-                        </div>
-                        <div class='row'> 
-                <div class="col-sm-4"><a href="http://www.google.com" target="_blank"><img src="youtube.png" class="img-thumbnail" alt="facebook share"></a></div>
-                <div class="col-sm-4"><a href="http://www.twitter.com" target="_blank"><img src="twitter_retweet.png" class="img-thumbnail" alt="google translate"></a></div>
-                <div class="col-sm-4"><a  href="http://www.facebook.com" target="_blank"><img src="facebook_video.png" alt="twitter_video" class="img-thumbnail"></a></div>             
-                        </div>   
-            </div>         
-</section>
     
   </body>
   
-
-<footer class="text-center text-lg-start bg-light text-white h5">
-  <section id="fin" class="" style="background-color: rgb(0, 0, 0); padding-top: 1px;">
-    <div class="container text-center text-md-start mt-5">
-      <div class="row mt-3">
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <h6 class="text-uppercase fw-bold mb-4">Lahlouh Nassim</h6>
-          <p>
-            C'est la fin du porte-folio ! <br>Si vous avez été concaincu,  il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mon github
-          </p>
-        </div>
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <h6 class="text-uppercase fw-bold mb-4">
-            Lien utile
-          </h6>
-          <p>
-            <a href="https://www.linkedin.com/in/nassim-lahlouh-%F0%9F%92%BB%F0%9F%93%9A-6a96a8235/" class="text-reset" target="_blank">Linkedin</a>
-          </p>
-          <p>
-            <a href="https://github.com/NassimDevNum" class="text-reset" target="_blank">GitHub</a>
-          </p>
-        </div>
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p> à Montrouge</p>
-          <p>lahlouhnassimdev@gmail.com</p>
-          <p>07 83 05 88 71</p>
+  <footer class="text-center text-lg-start bg-light text-white h5" style="margin-top: -48px;">
+    <section id="fin" class="" style="background-color: rgb(0, 0, 0);">
+      <div class="container text-center text-md-start mt-5">
+        <div class="row mt-3">
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">Lahlouh Nassim</h6>
+            <p>
+              Si vous avez été convaincu, il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mes différents liens
+            </p>
+          </div>
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              Lien utile
+            </h6>
+            <p>
+              <p>
+                <a href="https://www.linkedin.com/in/nassim-lahlouh-%F0%9F%92%BB%F0%9F%93%9A-6a96a8235/" class="text-reset" target="_blank">Linkedin</a>
+              </p>
+              <p>
+                <a href="https://github.com/NassimDevNum" class="text-reset" target="_blank">GitHub</a>
+              </p>
+          </div>
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+            <p> &#128205; à Montrouge</p>
+            <p> &#128231; lahlouhnassimdev@gmail.com</p>
+            <p> &#128222; 07 83 05 88 71</p>
+          </div>
         </div>
       </div>
+    </section>
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 10.05);">
+     <p>&#128640; merci pour votre visite &#128640;</p> 
     </div>
-  </section>
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 10.05);">
-   <p>&#128640; merci pour votre visite &#128640;</p>   
-  </div>
-</footer>
+  </footer>
 
 </html>
 
