--- a/parcours.html
+++ b/parcours.html
@@ -13,30 +13,45 @@
     <link href="styles.css" rel="stylesheet">
   </head>
   <header>
-    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-    <a class="navbar-brand" href="index.html">NL.</a>
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html" target="blank">Accueil</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="projet.html" target="blank">Projet</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="veilles.html" target="blank">Veilles</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#fin">Contrat</a>
-      </li>
-    </ul>
-  </nav>
-  </header>
+    <nav class="navbar navbar-expand-lg bg-light bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          &#127828;
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html" target="blank">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
+            </li><li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Projet
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="projA1.html">1er année</a></li>
+                <li><a class="dropdown-item" href="projA2.html">2éme année</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="stages.html" target="blank">Stages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="veilles.html" target="blank">Veilles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#fin">Contrat</a>
+            </li>
+          </ul>
+            <a>LAHLOUH Nassim.</a>
+        </div>
+      </div>
+    </nav>
+    </header>
   <body class="background">
     <button onclick="topFunction()" id="myBtn" title="Go to top">&#128285;</button>
       <span></span>
@@ -255,16 +270,14 @@
 
     
   </body>
-  
-
-  <footer class="text-center text-lg-start bg-light text-white h5">
+  <footer class="text-center text-lg-start bg-light text-white h5" >
     <section id="fin" class="" style="background-color: rgb(0, 0, 0);">
       <div class="container text-center text-md-start mt-5">
         <div class="row mt-3">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Lahlouh Nassim</h6>
             <p>
-              C'est la fin du porte-folio ! <br>Si vous avez été concaincu,  il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mon github
+              Si vous avez été convaincu, il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mes différents liens
             </p>
           </div>
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -272,17 +285,18 @@
               Lien utile
             </h6>
             <p>
-              <a href="https://www.linkedin.com/in/nassim-lahlouh-%F0%9F%92%BB%F0%9F%93%9A-6a96a8235/" class="text-reset" target="_blank">Linkedin</a>
-            </p>
-            <p>
-              <a href="https://github.com/NassimDevNum" class="text-reset" target="_blank">GitHub</a>
-            </p>
+              <p>
+                <a href="https://www.linkedin.com/in/nassim-lahlouh-%F0%9F%92%BB%F0%9F%93%9A-6a96a8235/" class="text-reset" target="_blank">Linkedin</a>
+              </p>
+              <p>
+                <a href="https://github.com/NassimDevNum" class="text-reset" target="_blank">GitHub</a>
+              </p>
           </div>
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p> à Montrouge</p>
-            <p>lahlouhnassimdev@gmail.com</p>
-            <p>07 83 05 88 71</p>
+            <p> &#128205; à Montrouge</p>
+            <p> &#128231; lahlouhnassimdev@gmail.com</p>
+            <p> &#128222; 07 83 05 88 71</p>
           </div>
         </div>
       </div>
