--- a/projA2.html
+++ b/projA2.html
@@ -36,7 +36,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="projA1.html">1er année</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="projA2.html">2éme année</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -326,7 +326,7 @@ Après avoir acquis des compétences en développement web grâce à mes projets
       <div class="hero__wrapper">   
         <div class="hero__left" data-aos="fade-left">
           <div class="hero__left__wrapper">
-            <h1 class="hero__heading" style="color: #d8cbe1;">Projet 8:<br>Client léger Auto-école </h1>
+            <h1 class="hero__heading" style="color: #d8cbe1;">Projet 9:<br>Client léger Auto-école </h1>
             <p class="hero__info" style="font-size: medium; color: #d8cbe1;">
               Après avoir acquis des connaissances dans différents langages de programmation tels que HTML, CSS, JavaScript, PHP et MySQL, j'ai décidé de mettre mes compétences à l'épreuve en créant un site web pour une auto-école qui rassemble toutes mes connaissances. Mon objectif était de créer une interface utilisateur conviviale pour aider les futurs conducteurs à s'inscrire à une formation de conduite en ligne. Pour cela, j'ai utilisé la méthode de conception MVC pour organiser le code et améliorer la maintenance du site. J'ai également intégré un calendrier interactif à l'aide de FullCalendar, qui permettait aux étudiants de planifier facilement leurs heures de conduite. <br><br>
               J'ai commencé par concevoir l'interface utilisateur en utilisant HTML, CSS et Bootstrap pour rendre le site esthétiquement plaisant et facile à naviguer. En utilisant PHP, j'ai créé des pages dynamiques et connecté le site à une base de données MySQL pour stocker les informations des étudiants et des cours. <br><br>
@@ -346,18 +346,18 @@ Après avoir acquis des compétences en développement web grâce à mes projets
   </section>
 
   
-  <section id="hero10">
+  <section id="hero10" style="background-color: #d8cbe1;">
     <div class="container">
       <div class="hero__wrapper">
         <div class="hero__left" data-aos="fade-left">
           <div class="hero__left__wrapper">
-            <h1 class="hero__heading" style="color: #d8cbe1;">Projet 9 :<br>Client lourd Auto-école</h1>
-            <p class="hero__info" style="font-size: medium; color: #d8cbe1;">
+            <h1 class="hero__heading" style="color: #3f2045;">Projet 10 :<br>Client lourd Auto-école</h1>
+            <p class="hero__info" style="font-size: medium; color: #3f2045;">
               Après avoir acquis des connaissances en Java, j'ai décidé de mettre mes compétences à l'épreuve en créant un site de gestion d'auto-école en utilisant Java pour le développement de l'application. Mon objectif était de créer une interface utilisateur conviviale pour aider les gestionnaires d'auto-école à gérer efficacement leurs élèves et leurs cours. Pour cela, j'ai utilisé Java Swing pour créer l'interface graphique de l'application client lourd. J'ai également utilisé Java pour créer une base de données locale qui stockait les informations des élèves et des cours avec MySQL. L'application permettait aux gestionnaires d'auto-école de créer des comptes d'utilisateurs pour les élèves, d'inscrire les élèves à des cours, de gérer les horaires et les disponibilités des enseignants, et de générer des rapports sur les progrès des élèves. <br><br>
               Le site de gestion d'auto-école que j'ai créé m'a permis de mettre en pratique mes compétences en programmation Java et de créer une expérience utilisateur complète pour l'application client lourd. En utilisant différentes techniques et fonctionnalités de Java, j'ai réussi à créer une plateforme fonctionnelle pour la gestion d'auto-école. Ce projet m'a également permis de découvrir de nouveaux défis et d'approfondir mes connaissances en Java pour le développement d'applications et en méthode MVC.
                   </p>
             <div class="button__wrapper" style="padding-bottom: 35px;">
-              <a href="https://github.com/NassimDevNum/SnakeByMe" class="btn" target="_blank" style=" width: 200px; background-color: #d8cbe1; color: #3f2045;">Code source</a>
+              <a href="https://github.com/NassimDevNum/SnakeByMe" class="btn" target="_blank" style=" width: 200px; background-color: #3f2045; color: #d8cbe1;">Code source</a>
             </div>
           </div>
         </div>
@@ -410,14 +410,14 @@ Après avoir acquis des compétences en développement web grâce à mes projets
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 
-  <footer class="text-center text-lg-start bg-light text-white h5">
+  <footer class="text-center text-lg-start bg-light text-white h5" style="margin-top: -48px;">
     <section id="fin" class="" style="background-color: rgb(0, 0, 0);">
       <div class="container text-center text-md-start mt-5">
         <div class="row mt-3">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Lahlouh Nassim</h6>
             <p>
-              C'est la fin du porte-folio ! <br>Si vous avez été concaincu,  il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mon github
+              Si vous avez été convaincu, il est maintenant temps de prendre contact avec moi ou bien de vous diriger vers mes différents liens
             </p>
           </div>
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -434,9 +434,9 @@ Après avoir acquis des compétences en développement web grâce à mes projets
           </div>
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p> à Montrouge</p>
-            <p>lahlouhnassimdev@gmail.com</p>
-            <p>07 83 05 88 71</p>
+            <p> &#128205; à Montrouge</p>
+            <p> &#128231; lahlouhnassimdev@gmail.com</p>
+            <p> &#128222; 07 83 05 88 71</p>
           </div>
         </div>
       </div>
