--- a/veilles.html
+++ b/veilles.html
@@ -128,6 +128,16 @@
     </div>
   </section>
   <section class="main-content marge">
+
+    <h2 style="text-align: center;">l'IA en france</h2>
+    <div>
+      L'intelligence artificielle en France connaît une croissance exponentielle ces dernières années. En 2018, le gouvernement français a publié une stratégie nationale pour <br>l'IA visant à faire de la France un leader mondial dans le domaine. Depuis lors, le gouvernement a investi massivement dans la recherche et le développement de l'IA, avec une enveloppe de 1,5 milliard d'euros sur cinq ans. <br><br>
+La France est un centre de recherche de premier plan dans le domaine de l'IA, avec des instituts tels que le CNRS et l'Inria qui ont une expertise de longue date dans le domaine. <br>Les entreprises françaises sont également très actives dans le développement de l'IA, avec des acteurs tels que Criteo, OVH et Thales qui ont mis en place des programmes de recherche et développement. <br><br>
+En France, l'IA est également perçue comme un outil clé pour améliorer l'efficacité et la compétitivité de divers secteurs économiques, tels que la santé, les transports, l'énergie et l'agriculture. <br>Cependant, la France est également consciente des défis éthiques et réglementaires posés par l'utilisation de l'IA, notamment en matière de protection de la vie privée et de l'équité. <br><br>
+Dans l'ensemble, l'IA en France est en constante évolution, avec une forte volonté politique et un environnement de recherche et développement dynamique qui positionne le pays comme un acteur clé dans le domaine. <br>Cependant, il reste des défis à relever pour assurer une utilisation responsable et éthique de l'IA.
+
+  </div>
+
     <div style="display: block; justify-content: space-between;" >
           <h2 style="text-align: center;">ChatGPT</h2>
           <div>
@@ -170,6 +180,7 @@
           </div>
         </div>
     </div>
+    
         <div style="display: block; justify-content: space-between;" >
             <h2 style="text-align: center;">MidJourney</h2>
             <div>
@@ -217,6 +228,11 @@
     </section>
         
 <section id="FluxRss">
+  <div style="text-align: center;">
+    <a class="btn" title="NewTab" style="width: auto;height: auto;margin: 30px;font-size: xx-large; text-align: center;">Flux RSS</a>
+   
+  </div>
+   
   <div class="Rss">
 <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Loading" data-fw-param="160893/"></script> <!-- end feedwind code -->
   </div>
