--- a/parcours.html
+++ b/parcours.html
@@ -117,13 +117,13 @@
     <div class="row">
         <div class="col-md-6">
             <div class="progress" style="height: 35px;">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
-                <h5>HTML & CSS 85%</h5>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                <h5>HTML & CSS 95%</h5>
             </div>
             </div>
             <div class="progress" style="height: 35px;">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
-                <h5>PHP 65%</h5>
+                <h5>PHP, JavaScript 65%</h5>
             </div>
             </div>
             <div class="progress" style="height: 35px;">
@@ -134,13 +134,13 @@
         </div>
         <div class="col-md-6">
             <div class="progress" style="height: 35px;">
-                <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                <h5>SQL 75%</h5>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                <h5>SQL 90%</h5>
             </div>
             </div>
             <div class="progress" style="height: 35px;">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                <h5>BOOTSRAP 75%</h5>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                <h5>BOOTSRAP 100%</h5>
             </div>
             </div>
             <div class="progress" style="height: 35px;">
@@ -149,6 +149,7 @@
             </div>
             </div>
         </div>
+        
     </div>
 </section>
 
