--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
           </div>
         </div>
         <div class="hero__right" data-aos="fade-right">
+          
           <div class="hero__imgWrapper">
-            <img src="header-img.svg"   style="width: 100%; margin-right: 0px;">
+           
+            <img src="moi4.png"   style="width: 100%; margin-right: 0px;">
       </div>
       </div>
       </div>
