--- a/projA2.html
+++ b/projA2.html
@@ -117,7 +117,7 @@
         <div class="cards">
           <article class="card">
             <header>
-                <h2>Calculatrice Java</h2>
+                <h2>AirFrance</h2>
             </header>    
             <img src="miniaf.png" alt="Hot air balloons">
             <div class="content">
@@ -315,6 +315,8 @@ Après avoir acquis des compétences en développement web grâce à mes projets
             <p class="hero__info" style="font-size: medium; color: #d8cbe1;">
               Après avoir acquis des connaissances dans différents langages de programmation tels que HTML, CSS, JavaScript, PHP et MySQL, j'ai décidé de mettre mes compétences à l'épreuve en créant un site web pour une auto-école qui rassemble toutes mes connaissances. Mon objectif était de créer une interface utilisateur conviviale pour aider les futurs conducteurs à s'inscrire à une formation de conduite en ligne. Pour cela, j'ai utilisé la méthode de conception MVC pour organiser le code et améliorer la maintenance du site. J'ai également intégré un calendrier interactif à l'aide de FullCalendar, qui permettait aux étudiants de planifier facilement leurs heures de conduite. <br><br>
               J'ai commencé par concevoir l'interface utilisateur en utilisant HTML, CSS et Bootstrap pour rendre le site esthétiquement plaisant et facile à naviguer. En utilisant PHP, j'ai créé des pages dynamiques et connecté le site à une base de données MySQL pour stocker les informations des étudiants et des cours. <br><br>
+              Le respect des lois de la RGPD est essentiel pour garantir la protection des données personnelles des utilisateurs. Pour y parvenir, différentes mesures doivent être mises en place pour assurer la sécurité et la confidentialité des données.
+              Parmi ces mesures, on peut citer l'utilisation de cookies conformes à la réglementation en vigueur, la prévention de la collecte de données non nécessaires, et la suppression des données au bout d'un certain temps. <br> 
               Grâce à ce projet, j'ai réussi à mettre en pratique mes compétences en programmation et à créer une expérience utilisateur complète pour l'auto-école. J'ai également appris de nouvelles techniques telles que la méthode MVC et l'intégration de FullCalendar. Ce projet m'a permis de découvrir de nouveaux défis et d'approfondir mes connaissances dans les langages de programmation tout en créant une plateforme fonctionnelle pour l'auto-école.
             </p>
            <div class="button__wrapper" style="padding-bottom: 35px;">
@@ -324,7 +326,41 @@ Après avoir acquis des compétences en développement web grâce à mes projets
         </div>
         <div class="hero__right" data-aos="fade-right">
           <div class="hero__imgWrapper">
-            <img src="ppel.PNG"   style="width: 100%; margin-right: 0px;">
+          
+            <div id="carouselExampleIndicators" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="ppelp1.PNG" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="ppelp2.PNG" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="ppelpcal.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="trelloppE.PNG" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="gitppel.PNG" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
       </div>
       </div>
       </div>
@@ -354,6 +390,8 @@ Après avoir acquis des compétences en développement web grâce à mes projets
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+             
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -372,6 +410,12 @@ Après avoir acquis des compétences en développement web grâce à mes projets
                   <img src="clil3.png" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 style="color: black;">Gestion de formules</h5>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="clientlourdTrello.PNG" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 style="color: black;">Trello</h5>
                   </div>
                 </div>
               </div>
