--- a/veilles.html
+++ b/veilles.html
@@ -160,6 +160,29 @@
      <p style="font-size: 125%; padding: 0 7% 0 7%;"> Midjourney : est un logiciel intégré dans discord qui fonctionne avec une prompte. Il suffit de lui donner une suite de mots clés et ce dernier nous donne une image créée avec ce qu’on lui demande. Par exemple si on écrit </p>
     </div>
 
+ 
+      <h2 style="text-align: center;">
+        Quelques chiffres
+      </h2>
+      <div class="row" style="margin: 0 15% 0 15%;">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <img src="1muser.png" style="width: 85%;text-align: center;">
+           </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="midjourney-statistics.png">
+              </div>
+          </div>
+        </div>
+      </div>
+    
+
+
     <h2 style="text-align: center;">
       De quoi sont-ilscapables ?
       </h2>
@@ -227,7 +250,10 @@
  <p style="font-size: 125%; padding: 0 7% 0 7%;">Cependant, l'IA a également soulevé des préoccupations quant à la protection de la vie privée, la sécurité des données, la discrimination algorithmique, le remplacement des emplois. Il est donc essentiel de continuer à surveiller les progrès de l'IA et à travailler à son développement de manière responsable et éthique afin de maximiser ses avantages tout en minimisant ses risques. 
   <br><br> C'est pourquoi la veille sur l'IA est un outil essentiel pour suivre les avancées technologiques et les transformations en cours dans notre société. En comprenant les enjeux de l'IA et en anticipant les défis et les opportunités qu'elle pose, les entreprises et les travailleurs pourront s'adapter aux changements en cours et tirer parti de cette technologie révolutionnaire de manière responsable</p>
 </div>
-        </section>
+<div style=" display: flex;justify-content: center;align-items: center; width: 100;">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/cR6VepNl1Lc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+       </section>
       </body>
     </html>
     </div>
