--- a/parcours.html
+++ b/parcours.html
@@ -145,7 +145,7 @@
             </div>
             <div class="progress" style="height: 35px;">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                <h5>GitHub 80%</h5>
+                <h5>GitHub, Trello 80%</h5>
             </div>
             </div>
         </div>
@@ -165,9 +165,9 @@
                 <div class="timeline-panel-container">
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h3 style="color: #3f2045;">Ecole IRIS</h3>
+                            <h3 style="color: #3f2045;">Groupe IPF</h3>
                             <h4>Gestion des retards</h4>
-                            <p class="text-muted"><small class="bi bi-clock"></small> 2022</p>
+                            <p class="text-muted"><small class="bi bi-clock"></small>  du 14 novembre / 16 decembre 2022</p>
                         </div> 
                     <div class="timeline-body" style="color:#3f2045 ;">
                         <p></p>
@@ -187,7 +187,7 @@
                         <div class="timeline-heading">
                             <h3 style="color: #3f2045;">Elite démenagement</h3>
                             <h4>Développeur Web</h4>
-                            <p class="text-muted"><small class="bi bi-clock"></small>2022</p>
+                            <p class="text-muted"><small class="bi bi-clock"></small>du 30 Mai / 1 juillet 2022</p>
                         </div>
                     <div class="timeline-body" style="color:#3f2045 ;">
                         <p>Réalisation de la maquette</p>
@@ -246,9 +246,9 @@
                             </div>
                                 <div class="red-divider"></div>
                                     <div class="education-subtitle">
-                                <h6>Language : Sql, bJava & Phps</h6>
-                                <h6>Base de Données</h6>
-                                <h6>Architecture MVC </h6> 
+                                <h6>Language : HTML, CSS, PHP, JAVA</h6>
+                                <h6>Base de Données: MCD et MySQL, Trigger</h6>
+                                <h6>POO et Architecture MVC</h6> 
                                     </div>
                         </div>
                     </div>
