--- a/stages.html
+++ b/stages.html
@@ -184,7 +184,7 @@
 
           <div class="hero__left__wrapper">
             <h1 class="hero__heading" >Le BTS SIO C'est quoi ?</h1>
-            <p class="hero__info" style="font-size: medium;" >À la rentrée de ma deuxième année de BTS, j'ai eu l'opportunité de réaliser un stage dans une entreprise qui m'a permis d'approfondir mes connaissances en PHP. J'étais accompagné d'un autre stagiaire, et notre mission consistait à créer un gestionnaire de retard pour les étudiants d'une école. <br>
+            <p class="hero__info" style="font-size: medium;" >À la rentrée de ma deuxième année de BTS, j'ai eu l'opportunité de réaliser un stage au sein du groupe IPF qui m'a permis d'approfondir mes connaissances en PHP. J'étais accompagné d'un autre stagiaire, et notre mission consistait à créer un gestionnaire de retard pour les étudiants d'une école. <br>
                 Pour cela, nous avons commencé par le DCU (document de conception d'interface utilisateur) avec StarUML, puis nous avons réalisé le MCD (modèle conceptuel de données) avec Win design, ce qui nous a grandement aidé dans la mise en place de la base de données pour le site avec MySQL. Enfin, nous avons dressé la maquette afin de passer à la phase de codage tout en respectant le modèle d'architecture MVC.
                 <br><br>
                 Tout au long de ce stage, j'ai eu l'opportunité d'utiliser différents outils de collaboration tels que Trello, Git et Discord pour communiquer avec mon équipe et suivre l'avancement du projet. Cette expérience m'a permis de développer mes compétences en gestion de projet et de travailler en équipe tout en apprenant de nouvelles technologies. 
